force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Days_of_week__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Days_of_week__c</fullName>
    <description>Which days of the week does this rate apply to?</description>
    <inlineHelpText>Which days of the week does this rate apply to?</inlineHelpText>
    <label>Days of week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Days_of_week</valueSetName>
    </valueSet>
</CustomField>