force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_In_Progress_Until__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_In_Progress_Until__c</fullName>
    <label>In Progress Until</label>
    <type>DateTime</type>
</CustomField>