force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Maximum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Maximum_Capacity__c</fullName>
    <label>Maximum Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>