force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Minimum_days_to_travel_date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Minimum_days_to_travel_date__c</fullName>
    <label>Minimum days to travel date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>