force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>