force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Parent_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Parent_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Rate</label>
    <referenceTo>sugati__RA_Rate__c</referenceTo>
    <relationshipLabel>Child Rates</relationshipLabel>
    <relationshipName>Child_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>