force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Rate_Link__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Rate_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + Id, Name, &quot;_blank&quot;)</formula>
    <label>Rate Link</label>
    <type>Text</type>
</CustomField>