force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Rounding_For_Weekly_Rates__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Rounding_For_Weekly_Rates__c</fullName>
    <label>Rounding For Weekly Rates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round Up</fullName>
                <default>true</default>
                <label>Round Up</label>
            </value>
            <value>
                <fullName>Round Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>