force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Service_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Service_Location_Name__c</fullName>
    <formula>sugati__RA_Service_Location__r.Name</formula>
    <label>Service Location Name</label>
    <type>Text</type>
</CustomField>