force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Sugati_Rate_Data_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Sugati_Rate_Data_Id__c</fullName>
    <label>Sugati Rate Data Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>