force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_To_Airport_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_To_Airport_Name__c</fullName>
    <formula>sugati__RA_To_Airport_Station__r.Name</formula>
    <label>To Airport Name</label>
    <type>Text</type>
</CustomField>