force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Total_Number_Available__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Total_Number_Available__c</fullName>
    <label>Total Number Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>