force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Transfer_Option_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Transfer_Option_Name__c</fullName>
    <formula>sugati__RA_Transfer_Option__r.Name</formula>
    <label>Transfer Option Name</label>
    <type>Text</type>
</CustomField>