force-app/main/default/objects/sugati__RA_Rate__c/recordTypes/sugati__Accommodation_Rate.recordType-meta.xml
<RecordType>
    <fullName>sugati__Accommodation_Rate</fullName>
    <active>true</active>
    <label>Accommodation Rate</label>
</RecordType>