force-app/main/default/objects/sugati__RA_Rate__c/recordTypes/sugati__Activity.recordType-meta.xml
<RecordType>
    <fullName>sugati__Activity</fullName>
    <active>true</active>
    <label>Activity</label>
</RecordType>