force-app/main/default/objects/sugati__RA_Rate__c/recordTypes/sugati__Daily.recordType-meta.xml
<RecordType>
    <fullName>sugati__Daily</fullName>
    <active>false</active>
    <description>Daily Rate?</description>
    <label>Daily</label>
</RecordType>