force-app/main/default/objects/sugati__RA_Rate__c/recordTypes/sugati__Non_Daily_Rate.recordType-meta.xml
<RecordType>
    <fullName>sugati__Non_Daily_Rate</fullName>
    <active>false</active>
    <description>Not a Daily Rate</description>
    <label>Non Daily Rate</label>
</RecordType>