force-app/main/default/objects/sugati__RA_Rate__c/recordTypes/sugati__Service_Rate.recordType-meta.xml
<RecordType>
    <fullName>sugati__Service_Rate</fullName>
    <active>true</active>
    <description>Service Rate</description>
    <label>Service Rate</label>
</RecordType>