force-app/main/default/objects/sugati__RA_Rate__c/recordTypes/sugati__Transfer.recordType-meta.xml
<RecordType>
    <fullName>sugati__Transfer</fullName>
    <active>true</active>
    <label>Transfer</label>
</RecordType>